--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.mycompany.app</groupId>
-  <artifactId>my-app</artifactId>
-  <packaging>jar</packaging>
+  <artifactId>hello-world</artifactId>
+  <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>my-app</name>
+  <name>hello-world</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -18,9 +18,9 @@
   <build>
     <plugins>
       <plugin>
-        <!-- Build an executable JAR -->
+        <!-- Build an executable WAR -->
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
+        <artifactId>maven-jar-plugin</artifactId> 
         <version>3.0.2</version>
         <configuration>
           <archive>
@@ -30,6 +30,14 @@
               <mainClass>com.mycompany.app.App</mainClass>
             </manifest>
           </archive>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>3.2.2</version>
+        <configuration>
+          <webappDirectory>/sample/servlet/container/deploy/directory</webappDirectory>
         </configuration>
       </plugin>
     </plugins>
