--- a/pom.xml
+++ b/pom.xml
@@ -18,13 +18,21 @@
   <build>
     <plugins>
       <plugin>
+        <!-- Build an executable JAR -->
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>3.2.2</version>
+        <artifactId>maven-jar-plugin</artifactId> 
+        <version>3.0.2</version>
         <configuration>
-          <webappDirectory>/sample/servlet/container/deploy/directory</webappDirectory>
+          <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <classpathPrefix>lib/</classpathPrefix>
+              <mainClass>com.mycompany.app.App</mainClass>
+            </manifest>
+          </archive>
         </configuration>
       </plugin>
+      <plugin>
     </plugins>
   </build>
 </project>
