--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.mycompany.app</groupId>
-  <artifactId>hello-world</artifactId>
-  <packaging>war</packaging>
+  <artifactId>my-app</artifactId>
+  <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>hello-world</name>
+  <name>my-app</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -20,7 +20,7 @@
       <plugin>
         <!-- Build an executable JAR -->
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId> 
+        <artifactId>maven-jar-plugin</artifactId>
         <version>3.0.2</version>
         <configuration>
           <archive>
@@ -32,7 +32,6 @@
           </archive>
         </configuration>
       </plugin>
-      <plugin>
     </plugins>
   </build>
-</project>
+</project>roject>
